# backend/docs/swagger.json
@@ -42,15 +42,13 @@
                         "type": "string",
                         "description": "Cache Policy (options: cache_first, no_cache, cache_only)",
                         "name": "cache_policy",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "string",
                         "description": "OCR Engine (options: TESSERACT, EASYOCR, DOCTR)",
                         "name": "engine",
-                        "in": "formData",
-                        "required": true
+                        "in": "formData"
                     },
                     {
                         "type": "boolean",
@@ -79,6 +77,12 @@
                             "$ref": "#/definitions/utils.ErrorResponse"
                         }
                     },
+                    "403": {
+                        "description": "Forbidden",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ErrPermissionDeniedResponse"
+                        }
+                    },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
@@ -104,6 +108,15 @@
                 },
                 "topRight": {
                     "$ref": "#/definitions/utils.XY"
+                }
+            }
+        },
+        "utils.ErrPermissionDeniedResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "Permission denied"
                 }
             }
         },
@@ -152,6 +165,10 @@
         "utils.OCRResponseList": {
             "type": "object",
             "properties": {
+                "cached": {
+                    "type": "boolean",
+                    "example": true
+                },
                 "engine": {
                     "$ref": "#/definitions/utils.OCREngineType"
                 },
@@ -164,6 +181,10 @@
                     "items": {
                         "$ref": "#/definitions/utils.OCRResponse"
                     }
+                },
+                "raw": {
+                    "type": "boolean",
+                    "example": true
                 }
             }
         },
